# gsDesign

./: .Rbuildignore  .gitignore  .travis.yml  404.html  AGENTS.html  AGENTS.md  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  Doxyfile  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS  NEWS.md  README  README.md  _pkgdown.yaml  _pkgdown.yml  _sinewconfig.yml  authors.html  authors.md  cran-comments.md  gsDesign.Rproj  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  test_astar.R
.gemini/: styleguide.md
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  test-coverage.yaml
R/: .-package.R  KT.R  KTZ.R  LFPWE.R  as_gt.R  as_lt.R  as_rtf.R  as_table.R  binomialExactPValues.R  binomialPowerTable.R  eEvents.R  eEvents1.R  globals.R  gsBinomial.R  gsBinomialExact.R  gsCP.R  gsDesign-package.R  gsDesign.R  gsMethods.R  gsNormalGrid.R  gsSimulate.R  gsSpending.R  gsSurv-eEvents.R  gsSurv-interim.R  gsSurv-method.R  gsSurv-nSurv.R  gsSurv-utils.R  gsSurv-xtable.R  gsSurv.R  gsSurvCalendar.R  gsSurvPower.R  gsSurvival.R  gsUtilities.R  gsWTPT.R  gsnSurv.R  gsqplot.R  hgraph.R  hgraph.r  nBinomial1Sample.R  nBinomial1Sample.r  (+22 more)
articles/: ConditionalErrorSpending.html  ConditionalErrorSpending.md  ConditionalPowerPlot.html  ConditionalPowerPlot.md  GentleIntroductionToGSD.html  GentleIntroductionToGSD.md  GraphicalMultiplicity.html  HarmBound.html  HarmBound.md  MultiSeasonRareEvents.html  MultiSeasonRareEvents.md  OneSampleBinomial.html  PoissonMixtureModel.html  PoissonMixtureModel.md  SelectiveBoundTesting.html  SelectiveBoundTesting.md  SeqDesignSurvival.html  SeqDesignSurvival.md  SpendingFunctionOverview.html  SpendingFunctionOverview.md  SpendingTime.html  SurvivalOverview.html  SurvivalOverview.md  VaccineEfficacy.html  VaccineEfficacy.md  binomialSPRTExample.html  binomialSPRTExample.md  binomialTwoSample.html  binomialTwoSample.md  gsDesignPackageOverview.html  gsDesignPackageOverview.md  gsSurvBasicExamples.html  gsSurvBasicExamples.md  gsSurvPower.html  gsSurvPower.md  gsSurvTemplate.html  gsSurvTemplateInstructions.html  hGraph.html  hGraph.md  index.html  (+6 more)
devel/: 404.html  AGENTS.html  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
devel/articles/: ConditionalErrorSpending.html  ConditionalErrorSpending.md  ConditionalPowerPlot.html  ConditionalPowerPlot.md  GentleIntroductionToGSD.html  GraphicalMultiplicity.html  GraphicalMultiplicity.md  HarmBound.html  HarmBound.md  MultiSeasonRareEvents.html  MultiSeasonRareEvents.md  PoissonMixtureModel.html  PoissonMixtureModel.md  SelectiveBoundTesting.html  SelectiveBoundTesting.md  SeqDesignSurvival.html  (+24 more)
docs/: .gitignore  authors.html  index.html  pkgdown.yml
doxygen/: doxygen-awesome.css
gsDesign.Rcheck/: 00install.out  gsDesign-Ex.R  gsDesign-Ex.Rout
inst/: validation_tracker.xlsx
man/: Power.ssrCP.Rd  Spending-function-overview.Rd  Spending_Function_Overview.Rd  Wang-Tsiatis-bounds.Rd  as_gt.Rd  as_rtf.Rd  as_table.Rd  binomial.Rd  binomialPowerTable.Rd  checkScalar.Rd  ciBinomial.Rd  condPower.Rd  eEvents.Rd  gsBValue.Rd  gsBinomialExact.Rd  gsBound.Rd  gsBoundCP.Rd  gsBoundSummary.Rd  gsCP.Rd  gsCPz.Rd  gsDelta.Rd  gsDensity.Rd  gsDesign-package-overview.Rd  gsDesign-package.Rd  gsDesign.Rd  gsHR.Rd  gsProbability.Rd  gsRR.Rd  gsSurvCalendar.Rd  gsSurvPower.Rd  gsbound.Rd  hGraph.Rd  hrn2z.Rd  hrz2n.Rd  invCDF.Rd  lt-methods.Rd  nBinomial.Rd  nBinomial1Sample.Rd  nEvents.Rd  nEventsIA.Rd  (+43 more)
news/: index.html  index.md
pkg/: DESCRIPTION  NAMESPACE
pkg/gsDesignExplorer-dev/branches/gsDesignExplorer-vstudio/src/: CMakeLists.txt  Makefile  Makefile.win  gsDesignGUI.cpp  gsDesignGUI.h  gsdesign.ui  main.cpp~HEAD
pkg/gsDesignGUI/src/: CMakeLists.txt  Makefile  Makefile.win  gsDesignGUI.c  mkdef.sh
pkg/gsDesignGUI/src/explorergui/: CMakeLists.txt  Rcpp.cpp  gsDesignGUI.cpp  gsDesignGUI.h  gsdesign.cpp  gsdesign.h  gsdesign.ui  images.qrc  main.cpp  mkdef.sh  qdslider.cpp  qdslider.h  ui_gsdesign.h
pkgdown/: extra.css
reference/: Spending_Function_Overview.html  as_gt.gsBinomialExactTable.html  as_gt.html  as_gt.md  as_rtf.gsBinomialExactTable.html  as_rtf.gsBoundSummary.html  as_rtf.html  as_rtf.md  as_table.gsBinomialExact.html  as_table.html  as_table.md  binomialPowerTable.html  binomialPowerTable.md  binomialSPRT.html  checkScalar.html  checkScalar.md  checkVector.html  eEvents.html  eEvents.md  gsBinomialExact.html  gsBinomialExact.md  gsBound.html  gsBound.md  gsBound1.html  gsBoundCP.html  gsBoundCP.md  gsBoundSummary.html  gsBoundSummary.md  gsCP.html  gsCP.md  gsDensity.html  gsDensity.md  gsDesign-package-overview.html  gsDesign-package.html  gsDesign-package.md  gsDesign.html  gsDesign.md  gsPOS.html  gsProbability.html  gsProbability.md  (+82 more)
revdep/: README.md  cran.md  data.sqlite  failures.md  problems.md
src/: constants.c  gridpts.c  gsDesign.h  gsbound.c  gsbound1.c  gsdensity.c  h1.c  hupdate.c  init.c  probpos.c  rprobrej.c  stdnorpts.c
tests/: README.md  gsDesign_independent_code.R  testthat.R
vignettes/: .gitignore  CComponentsOverview.Rmd  ConditionalErrorSpending.Rmd  ConditionalPowerPlot.Rmd  DelayedEffectSimulation_new.Rmd  EnrollmentAndEventAccumulation.Rmd  GentleIntroductionToGSD.Rmd  GraphicalMultiplicity.Rmd  HarmBound.Rmd  MultiSeasonRareEvents.Rmd  OneSampleBinomial.Rmd  OverviewOfSurvivalVignettes.Rmd  PoissonMixtureModel.Rmd  PoissonMixtureModel.rmd  RepeatedPandCI.Rmd  SelectiveBoundTesting.Rmd  SeqDesignSurvival.Rmd  SpendingFunctionOverview.Rmd  SpendingTime.Rmd  SpendingTime.rmd  SurvivalOverview.Rmd  VaccineEfficacy.Rmd  binomialSPRTExample.Rmd  binomialSPRTexample.Rmd  binomialTwoSample.Rmd  gsDesign.bib  gsDesignAISkills.Rmd  gsDesignPackageOverview.Rmd  gsDesignVsSEQDESIGN.Rmd  gsSurvBasicExamples.Rmd  gsSurvCureModel.Rmd  gsSurvForMultipleHypotheses.Rmd  gsSurvPower.Rmd  gsSurvTemplate-knitr.rnw  gsSurvTemplate.R  gsSurvTemplate.Rmd  gsSurvTemplate.rnw  gsSurvTemplateInstructions-knitr.rnw  gsSurvTemplateInstructions.Rmd  gsSurvTemplateInstructions.rnw  (+9 more)
www/: index.php
(+1036 files in other folders)
